[gd_scene load_steps=3 format=3 uid="uid://75lxgu4kptjf"]

[ext_resource type="Texture2D" uid="uid://dw12jd4aqt7ar" path="res://art/Items/item_slot_contorno.png" id="1_vcm7q"]
[ext_resource type="Script" path="res://scripts/slot.gd" id="2_lnu0n"]

[node name="Slot" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.093
anchor_bottom = 0.156
offset_right = -0.0400009
offset_bottom = -0.32
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vcm7q")
script = ExtResource("2_lnu0n")

[node name="Item" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 22.0
offset_right = 100.0
offset_bottom = 92.0
expand_mode = 1
stretch_mode = 5

[node name="CantidadLabel" type="Label" parent="."]
offset_left = 6.0
offset_right = 38.0
offset_bottom = 23.0
text = "0"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
